--- a/InTheBoks.Web/InTheBoks.Web.csproj
+++ b/InTheBoks.Web/InTheBoks.Web.csproj
@@ -164,7 +164,7 @@
     <Compile Include="Api\FriendsController.cs" />
     <Compile Include="Api\ItemsController.cs" />
     <Compile Include="Api\SearchController.cs" />
-    <Compile Include="Api\UserController.cs" />
+    <Compile Include="Api\UsersController.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\ContainerConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -348,81 +348,6 @@
     <Content Include="Content\themes\base\minified\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.tooltip.min.css" />
-    <Content Include="Content\themes\temp\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
-    <Content Include="Content\themes\temp\base\images\ui-bg_flat_75_ffffff_40x100.png" />
-    <Content Include="Content\themes\temp\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
-    <Content Include="Content\themes\temp\base\images\ui-bg_glass_65_ffffff_1x400.png" />
-    <Content Include="Content\themes\temp\base\images\ui-bg_glass_75_dadada_1x400.png" />
-    <Content Include="Content\themes\temp\base\images\ui-bg_glass_75_e6e6e6_1x400.png" />
-    <Content Include="Content\themes\temp\base\images\ui-bg_glass_95_fef1ec_1x400.png" />
-    <Content Include="Content\themes\temp\base\images\ui-bg_highlight-soft_75_cccccc_1x100.png" />
-    <Content Include="Content\themes\temp\base\images\ui-icons_222222_256x240.png" />
-    <Content Include="Content\themes\temp\base\images\ui-icons_2e83ff_256x240.png" />
-    <Content Include="Content\themes\temp\base\images\ui-icons_454545_256x240.png" />
-    <Content Include="Content\themes\temp\base\images\ui-icons_888888_256x240.png" />
-    <Content Include="Content\themes\temp\base\images\ui-icons_cd0a0a_256x240.png" />
-    <Content Include="Content\themes\temp\base\jquery-ui.css" />
-    <Content Include="Content\themes\temp\base\jquery.ui.accordion.css" />
-    <Content Include="Content\themes\temp\base\jquery.ui.all.css" />
-    <Content Include="Content\themes\temp\base\jquery.ui.autocomplete.css" />
-    <Content Include="Content\themes\temp\base\jquery.ui.base.css" />
-    <Content Include="Content\themes\temp\base\jquery.ui.button.css" />
-    <Content Include="Content\themes\temp\base\jquery.ui.core.css" />
-    <Content Include="Content\themes\temp\base\jquery.ui.datepicker.css" />
-    <Content Include="Content\themes\temp\base\jquery.ui.dialog.css" />
-    <Content Include="Content\themes\temp\base\jquery.ui.menu.css" />
-    <Content Include="Content\themes\temp\base\jquery.ui.progressbar.css" />
-    <Content Include="Content\themes\temp\base\jquery.ui.resizable.css" />
-    <Content Include="Content\themes\temp\base\jquery.ui.selectable.css" />
-    <Content Include="Content\themes\temp\base\jquery.ui.slider.css" />
-    <Content Include="Content\themes\temp\base\jquery.ui.spinner.css" />
-    <Content Include="Content\themes\temp\base\jquery.ui.tabs.css" />
-    <Content Include="Content\themes\temp\base\jquery.ui.theme.css" />
-    <Content Include="Content\themes\temp\base\jquery.ui.tooltip.css" />
-    <Content Include="Content\themes\temp\base\minified\images\ui-bg_flat_0_aaaaaa_40x100.png" />
-    <Content Include="Content\themes\temp\base\minified\images\ui-bg_flat_75_ffffff_40x100.png" />
-    <Content Include="Content\themes\temp\base\minified\images\ui-bg_glass_55_fbf9ee_1x400.png" />
-    <Content Include="Content\themes\temp\base\minified\images\ui-bg_glass_65_ffffff_1x400.png" />
-    <Content Include="Content\themes\temp\base\minified\images\ui-bg_glass_75_dadada_1x400.png" />
-    <Content Include="Content\themes\temp\base\minified\images\ui-bg_glass_75_e6e6e6_1x400.png" />
-    <Content Include="Content\themes\temp\base\minified\images\ui-bg_glass_95_fef1ec_1x400.png" />
-    <Content Include="Content\themes\temp\base\minified\images\ui-bg_highlight-soft_75_cccccc_1x100.png" />
-    <Content Include="Content\themes\temp\base\minified\images\ui-icons_222222_256x240.png" />
-    <Content Include="Content\themes\temp\base\minified\images\ui-icons_2e83ff_256x240.png" />
-    <Content Include="Content\themes\temp\base\minified\images\ui-icons_454545_256x240.png" />
-    <Content Include="Content\themes\temp\base\minified\images\ui-icons_888888_256x240.png" />
-    <Content Include="Content\themes\temp\base\minified\images\ui-icons_cd0a0a_256x240.png" />
-    <Content Include="Content\themes\temp\base\minified\jquery-ui.min.css" />
-    <Content Include="Content\themes\temp\base\minified\jquery.ui.accordion.min.css" />
-    <Content Include="Content\themes\temp\base\minified\jquery.ui.autocomplete.min.css" />
-    <Content Include="Content\themes\temp\base\minified\jquery.ui.button.min.css" />
-    <Content Include="Content\themes\temp\base\minified\jquery.ui.core.min.css" />
-    <Content Include="Content\themes\temp\base\minified\jquery.ui.datepicker.min.css" />
-    <Content Include="Content\themes\temp\base\minified\jquery.ui.dialog.min.css" />
-    <Content Include="Content\themes\temp\base\minified\jquery.ui.menu.min.css" />
-    <Content Include="Content\themes\temp\base\minified\jquery.ui.progressbar.min.css" />
-    <Content Include="Content\themes\temp\base\minified\jquery.ui.resizable.min.css" />
-    <Content Include="Content\themes\temp\base\minified\jquery.ui.selectable.min.css" />
-    <Content Include="Content\themes\temp\base\minified\jquery.ui.slider.min.css" />
-    <Content Include="Content\themes\temp\base\minified\jquery.ui.spinner.min.css" />
-    <Content Include="Content\themes\temp\base\minified\jquery.ui.tabs.min.css" />
-    <Content Include="Content\themes\temp\base\minified\jquery.ui.theme.min.css" />
-    <Content Include="Content\themes\temp\base\minified\jquery.ui.tooltip.min.css" />
-    <Content Include="Content\themes\temp\ui-darkness\images\ui-bg_flat_30_cccccc_40x100.png" />
-    <Content Include="Content\themes\temp\ui-darkness\images\ui-bg_flat_50_5c5c5c_40x100.png" />
-    <Content Include="Content\themes\temp\ui-darkness\images\ui-bg_glass_20_555555_1x400.png" />
-    <Content Include="Content\themes\temp\ui-darkness\images\ui-bg_glass_40_0078a3_1x400.png" />
-    <Content Include="Content\themes\temp\ui-darkness\images\ui-bg_glass_40_ffc73d_1x400.png" />
-    <Content Include="Content\themes\temp\ui-darkness\images\ui-bg_gloss-wave_25_333333_500x100.png" />
-    <Content Include="Content\themes\temp\ui-darkness\images\ui-bg_highlight-soft_80_eeeeee_1x100.png" />
-    <Content Include="Content\themes\temp\ui-darkness\images\ui-bg_inset-soft_25_000000_1x100.png" />
-    <Content Include="Content\themes\temp\ui-darkness\images\ui-bg_inset-soft_30_f58400_1x100.png" />
-    <Content Include="Content\themes\temp\ui-darkness\images\ui-icons_222222_256x240.png" />
-    <Content Include="Content\themes\temp\ui-darkness\images\ui-icons_4b8e0b_256x240.png" />
-    <Content Include="Content\themes\temp\ui-darkness\images\ui-icons_a83300_256x240.png" />
-    <Content Include="Content\themes\temp\ui-darkness\images\ui-icons_cccccc_256x240.png" />
-    <Content Include="Content\themes\temp\ui-darkness\images\ui-icons_ffffff_256x240.png" />
-    <Content Include="Content\themes\temp\ui-darkness\jquery-ui.css" />
     <Content Include="Content\themes\ui-darkness\images\ui-bg_flat_30_cccccc_40x100.png" />
     <Content Include="Content\themes\ui-darkness\images\ui-bg_flat_50_5c5c5c_40x100.png" />
     <Content Include="Content\themes\ui-darkness\images\ui-bg_glass_20_555555_1x400.png" />
@@ -443,9 +368,8 @@
     <Content Include="crossdomain.xml" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
-    <Content Include="Content\Site.css" />
+    <Content Include="Content\app.css" />
     <Content Include="offline.appcache" />
-    <Content Include="Content\themes\temp\ui-darkness\images\Thumbs.db" />
     <Content Include="Content\themes\ui-darkness\images\Thumbs.db" />
     <None Include="Properties\PublishProfiles\local.pubxml" />
     <Content Include="Scripts\app\app.js" />
